8138752: G1CollectorPolicy::should_should_update_surv_rate_group_predictors() uses wrong predicate

Instead of only updating the survivor rate groups in the young gc after marking and before mixed gc, update them during young gcs outside of marking

Reviewed-by: mgerdin, drwhite